# AIDD-30-days-challenge-

task1/: Readme.md
task10/: Readme.md
task10/.claude/agents/book-writing-orchestrator/: AGENT.md
task10/.claude/agents/editing-agent/: AGENT.md
task10/.claude/agents/formatting-agent/: AGENT.md
task10/.claude/agents/research-agent/: AGENT.md
task10/.claude/agents/writing-agent/: AGENT.md
task3/: README.md
task4/pdfsummarizer-quizgenerator/: .gitignore  README.md  agent.py  app.py  gemini.md  pyproject.toml
task7/: Readme.md
task8/: Readme.md
task8/calculator/: .gitignore
task8/calculator/.specify/memory/: constitution.md
task8/calculator/history/prompts/001-menu-calculator/: 0001-created-specification-for-menu-driven-calculator.spec.prompt.md  0002-generated-implementation-plan-for-menu-driven-calculator.plan.prompt.md  0003-generated-actionable-tasks-for-menu-driven-calculator.tasks.prompt.md  0004-implemented-menu-driven-basic-calculator.green.prompt.md  0005-ran-basic-calculator-cli.misc.prompt.md
task8/calculator/history/prompts/constitution/: 0001-update-constitution-to-v1.0.0.constitution.prompt.md
task8/calculator/specs/001-menu-calculator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
task8/calculator/src/: calculator_cli.py
task8/calculator/tests/integration/: test_continuous_flow.py  test_single_calculation.py
task8/calculator/tests/unit/: test_calculator_logic.py
task9/: Readme.md
task9/.claude/skills/chapter-outline-generator/: SKILL.md
(+2 files in other folders)
